[project]
name = "anti-jamming-env"
version = "1.0.0"
description = "AI-powered anti-jamming wireless communication OpenEnv environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core[cli]>=0.4.0",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "pydantic==2.10.3",
    "openai>=1.58.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anti_jamming_env"]
